Cambios de codigo

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Harry Potter PWA",
+  "name": "Hogwarts Characters",
   "short_name": "HP PWA",
-  "description": "Una app PWA que muestra personajes de Harry Potter",
+  "description": "Personajes de Harry Potter filtrados por casa",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#2a2a2a",
-  "theme_color": "#2a2a2a",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
